# LinuxdoScanner

./: .gitignore  README.md  linuxdoscanner-backend.spec  main.py  pyproject.toml
.github/workflows/: release.yml
chrome-extension/: background.js  content.js  manifest.json  options.css  options.html  options.js  popup.css  popup.html  popup.js
config/: settings.toml
linuxdoscanner/: __init__.py  ai_config.py  bridge.py  browser_state.py  classifier.py  cli.py  discourse.py  logging_utils.py  models.py  notification_config.py  notify.py  runtime_paths.py  service.py  settings.py  storage.py  topic_payload_builder.py  windows_startup.py  windows_tray.py
scripts/: build_windows_exe.py  eval_logged_batches.py  package_backend.py  package_extension.py  single_topic_probe.py
tests/: test_ai_config.py  test_bridge_restart.py  test_classifier.py  test_cli.py  test_notify.py  test_release_packaging.py  test_runtime_paths.py  test_service.py  test_settings.py  test_storage.py  test_windows_startup.py
